# fire_fishman

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: limitations.md  methodology.md
notebooks/: 01_translation_gap.ipynb  02_pitch_diagnostics.ipynb  03_prediction_model.ipynb  04_prescriptions.ipynb  05_prevention_analysis.ipynb  06_milb_vs_mlb.ipynb  07_yankees_systemic.ipynb  08_fishman_case_studies.ipynb  08_fishman_case_studies_executed.ipynb  08_yankees_case_studies.ipynb  08_yankees_case_studies_executed.ipynb  09_dawg_metric.ipynb  09_team_value_composite.ipynb  10_rice_comparison.ipynb  11_role_player_profile.ipynb  12_ideal_lineup.ipynb
outputs/: summary.md
src/fire_fishman/: __init__.py
src/fire_fishman/data/: prospects.py  statcast.py
src/fire_fishman/features/: batted_ball.py  pitch_level.py  team_value.py  tools_score.py  translation.py
tests/: test_batted_ball.py  test_pitch_level.py  test_prospects.py  test_team_value.py  test_tools_score.py  test_translation.py
