[project]
name = "fire-fishman"
version = "0.1.0"
description = "Why do elite MLB prospects fail? Modeling the tools-to-production translation gap."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pybaseball>=2.2.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "pymc>=5.10",
    "bambi>=0.13",
    "arviz>=0.17",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "jupyter>=1.0",
    "ipykernel>=6.0",
]

[project.optional-dependencies]
dev = ["ruff", "pytest"]

[tool.ruff]
line-length = 100
